@@ -35,6 +35,10 @@ magnitude_picker_width = 10
 # determines which units the switch for physical units converts to
 # one of: velocity, displacement, acceleration
 physical_units = velocity
+# parameters used in tapering before any filtering (see obspy.Trace.taper)
+taper_max_length = 5
+taper_max_percentage = 0.05
+taper_type = cosine
 
 # special purpose / edge use case switches, not widely tested..
 [misc]
