@@ -17,6 +17,8 @@ master
    plus offset, see #78)
  - save raw waveform data and station metadata in current obspyck instance's
    temporary directory for easy reuse (see #79)
+ - taper settings (applied before any filtering) can now be controlled via
+   config file (see #80)
 
 0.5.1
  - fix getting metadata via arclink (see #65)
